[package]
name = "Parser-calculator"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Oleh Moshenskyi"]
description = "My project is a calculator. We can calculate complex expressions, take into account the priorities of signs and parentheses. We will parse the mathematical expression into its component parts: numbers, operators, parentheses."

[lib]
name = "Parser_calculator"
path = "src/lib.rs"

[[bin]]
name = "Parser_calculator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
