[package]
name = "Parser_calculator"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Oleh Moshenskyi"]
description = "In the parser, we will parse a mathematical expression into its main components: numbers, signs, brackets. The result of the parsing will be used to calculate the mathematical expression, taking into account priorities: first the brackets, then multiplication/dividing and at the end addition and subtraction. The calculator also takes into account the nested brackets. The calculator also raises the number to the power (pow(n, p)), calculates the square root (sqrt(n)) and calculates sin(n) and cos(n)."

[lib]
name = "Parser_calculator"
path = "src/lib.rs"

[[bin]]
name = "Parser_calculator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
clap = { version = "4.5", features = ["derive"] }
